--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.6.0",
     "vee-validate": "^2.0.0-rc.19",
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
